syntax = "proto3";

package bilibili.app.resource.privacy.v1;
option go_package = "api";
option java_multiple_files = true;
option java_package = "com.bapis.bilibili.app.resource.privacy.v1";
option objc_class_prefix = "BAPIAppResourcePrivacyV1";


service Privacy {
  // PrivacyConfig 获取隐私设置
  rpc PrivacyConfig(NoArgRequest) returns(PrivacyConfigReply);
  // PrivacyConfig 修改隐私设置
  rpc SetPrivacyConfig(SetPrivacyConfigRequest) returns(NoReply);
}

// NoArgReq
message NoArgRequest{}
// NoReply
message NoReply{}

message PrivacyConfigReply{
  repeated PrivacyConfigItem privacy_config_item = 1;
}

message PrivacyConfigItem{
  PrivacyConfigType privacy_config_type = 1;
  string title = 2;
  PrivacyConfigState state = 3;
  string sub_title = 4;
  string sub_title_uri = 5;
}

// PrivacyConfigType 枚举-隐私开关类型
enum PrivacyConfigType {
  none = 0;              // 无意义 保留字段
  dynamic_city = 1;      // 动态同城
}

// PrivacyConfigState 枚举-隐私开关状态
enum PrivacyConfigState {
  close = 0;      // 关闭
  open = 1;      // 打开
}

message SetPrivacyConfigRequest {
  PrivacyConfigType privacy_config_type = 1;
  PrivacyConfigState state = 2;
}